--- a/arjs.html
+++ b/arjs.html
@@ -11,7 +11,7 @@
 <body style='margin : 0px; overflow: hidden;'>
   <a-scene embedded arjs='sourceType: webcam;'>
     <!-- handle marker with your own pattern -->
-    <a-marker type='pattern' url='path/to/pattern-marker.patt'>
+    <a-marker type='pattern' url='https://github.com/kousigan/inkjs/blob/master/pattern-19945713.patt'>
       <a-box position='0 0.5 0' material='color: red;'></a-box>
     </a-marker>
 
