--- a/arjs.html
+++ b/arjs.html
@@ -9,24 +9,16 @@
 </head>
 
 <body style='margin : 0px; overflow: hidden;'>
-  <a-scene embedded arjs='sourceType: webcam;'>
-    <!-- handle marker with your own pattern -->
-    <a-marker type='pattern' url='https://github.com/kousigan/inkjs/blob/master/pattern-19945713.patt'>
-      <a-box position='0 0.5 0' material='color: red;'></a-box>
-    </a-marker>
+  <a-scene embedded arjs=’sourceType: webcam; debugUIEnabled: false;’>
 
-    <!-- handle marker with hiro preset -->
-    <a-marker preset='hiro'>
-      <a-box position='0 0.5 0' material='color: green;'></a-box>
-    </a-marker>
+<a-marker preset=’hiro’’>
 
-    <!-- handle barcode marker -->
-    <a-marker type='barcode' value='5'>
-      <a-box position='0 0.5 0' material='color: blue;'></a-box>
-    </a-marker>
+<a-box position=’0 1 0′ material=’opacity: 0.5; color: #F70087;’></a-box>
 
-    <!-- add a simple camera -->
-    <a-entity camera></a-entity>
-  </a-scene>
+</a-marker>
+
+<a-entity camera></a-entity>
+
+</a-scene>
 </body>
 </html>
