--- a/arjs.html
+++ b/arjs.html
@@ -3,9 +3,11 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>JS Bin</title>
-  <script src="https://aframe.io/releases/0.6.0/aframe.min.js"></script>
-<script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
+  <title>AR testing</title>
+ 
+  <script src=”https://aframe.io/releases/0.9.0/aframe.min.js”></script>
+
+<script src=”https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.2/aframe/build/aframe-ar.js”></script>
 </head>
 
 <body style='margin : 0px; overflow: hidden;'>
