--- a/arjs.html
+++ b/arjs.html
@@ -1,26 +1,15 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>AR testing</title>
- 
-  <script src=”https://aframe.io/releases/0.9.0/aframe.min.js”></script>
-
-<script src=”https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.2/aframe/build/aframe-ar.js”></script>
-</head>
-
-<body style='margin : 0px; overflow: hidden;'>
-  <a-scene embedded arjs=’sourceType: webcam; debugUIEnabled: false;’>
-
-<a-marker preset=’hiro’’>
-
-<a-box position=’0 1 0′ material=’opacity: 0.5; color: #F70087;’></a-box>
-
-</a-marker>
-
-<a-entity camera></a-entity>
-
-</a-scene>
-</body>
+<script src="https://aframe.io/releases/0.6.1/aframe.min.js"></script>
+<script src="https://rawgit.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
+<script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.0/aframe/build/aframe-ar.js"> </script>
+  <body style='margin : 0px; overflow: hidden;'>
+    <a-scene stats embedded arjs='trackingMethod: best;'>
+      <a-marker preset="hiro">
+      <a-box position='0 1 0' material='color: blue;'>
+      </a-box>
+      </a-marker>
+      <a-entity camera></a-entity>
+    </a-scene>
+  </body>
 </html>
