--- a/arjs.html
+++ b/arjs.html
@@ -5,7 +5,7 @@
 <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.0/aframe/build/aframe-ar.js"> </script>
   <body style='margin : 0px; overflow: hidden;'>
     <a-scene stats embedded arjs='trackingMethod: best;'>
-      <a-marker preset="hiro">
+      <a-marker preset="pattern-19945713">
       <a-box position='0 1 0' material='color: blue;'>
       </a-box>
       </a-marker>
