--- a/arjs.html
+++ b/arjs.html
@@ -4,10 +4,13 @@
 <script src="https://rawgit.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
 <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.0/aframe/build/aframe-ar.js"> </script>
   <body style='margin : 0px; overflow: hidden;'>
+    
     <a-scene stats embedded arjs='trackingMethod: best;'>
+       <a-assets>
+        <video id="penguin-sledding" autoplay loop="true" src="penguin-sledding.mp4"></video>
+      </a-assets>
       <a-marker preset="hiro">
-      <a-box position='0 1 0' material='color: blue;'>
-      </a-box>
+      <a-video src="#penguin-sledding" width="16" height="9" position="0 0 -20"></a-video>
       </a-marker>
       <a-entity camera></a-entity>
     </a-scene>
