--- a/arjs.html
+++ b/arjs.html
@@ -7,10 +7,10 @@
     
     <a-scene stats embedded arjs='trackingMethod: best;'>
        <a-assets>
-        <video id="penguin-sledding" autoplay loop="true" src="penguin-sledding.mp4"></video>
+        <video id="vid" autoplay loop="true" src="https://www.w3schools.com/html/mov_bbb.mp4"></video>
       </a-assets>
       <a-marker preset="hiro">
-      <a-video src="#penguin-sledding" width="16" height="9" position="0 0 -20"></a-video>
+      <a-video src="#vid" width="16" height="9" position="0 0 -20"></a-video>
       </a-marker>
       <a-entity camera></a-entity>
     </a-scene>
