--- a/arjs.html
+++ b/arjs.html
@@ -5,14 +5,15 @@
 <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.0/aframe/build/aframe-ar.js"> </script>
   <body style='margin : 0px; overflow: hidden;'>
     
-    <a-scene stats embedded arjs='trackingMethod: best;'>
-       <a-assets>
-        <video id="vid" autoplay loop="true" src="https://www.w3schools.com/html/mov_bbb.mp4"></video>
-      </a-assets>
-      <a-marker preset="hiro">
-      <a-video src="#vid" width="16" height="9" position="0 0 -20"></a-video>
-      </a-marker>
-      <a-entity camera></a-entity>
-    </a-scene>
+    <a-scene>
+  <a-assets>
+    <video id="penguin-sledding" autoplay loop="true" src="https://www.w3schools.com/html/mov_bbb.mp4"></video>
+  </a-assets>
+
+  <!-- Using the asset management system. -->
+  <a-video src="#penguin-sledding" width="16" height="9" position="0 0 -20"></a-video>
+
+  <!-- Defining the URL inline. Not recommended but more comfortable for web developers. -->
+ </a-scene>
   </body>
 </html>
