--- a/arjs.html
+++ b/arjs.html
@@ -7,7 +7,7 @@
     
     <a-scene>
   <a-assets>
-    <video id="penguin-sledding" autoplay loop="true" src="https://www.w3schools.com/html/mov_bbb.mp4"></video>
+    <video id="penguin-sledding" autoplay loop="true" src="butterfly.mp4"></video>
   </a-assets>
 
   <!-- Using the asset management system. -->
