--- a/arjs.html
+++ b/arjs.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+  <meta name="apple-mobile-web-app-capable" content="yes">
 <script src="https://aframe.io/releases/0.6.1/aframe.min.js"></script>
 <script src="https://rawgit.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
 <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.0/aframe/build/aframe-ar.js"> </script>
@@ -7,7 +8,7 @@
     
     <a-scene>
   <a-assets>
-    <video id="penguin-sledding" autoplay loop="true" src="butterfly.mp4"></video>
+    <video id="penguin-sledding" autoplay loop="true" webkit-playsinline="playsinline" src="butterfly.mp4"></video>
   </a-assets>
 
   <!-- Using the asset management system. -->
