--- a/arjs.html
+++ b/arjs.html
@@ -8,12 +8,11 @@
     
     <a-scene>
   <a-assets>
-    <video id="penguin-sledding" autoplay loop="true" webkit-playsinline="playsinline" src="butterfly.mp4"></video>
-  </a-assets>
+    <img id="my-image" src="fox.png">
+      </a-assets>
 
   <!-- Using the asset management system. -->
-  <a-video src="#penguin-sledding" width="16" height="9" position="0 0 -20"></a-video>
-
+  <a-image src="#my-image"></a-image>
   <!-- Defining the URL inline. Not recommended but more comfortable for web developers. -->
  </a-scene>
   </body>
