--- a/arjs.html
+++ b/arjs.html
@@ -12,7 +12,7 @@
       </a-assets>
 
   <!-- Using the asset management system. -->
-  <a-image src="#my-image"></a-image>
+  <a-image src="#my-image"  width="3" height="1.5"></a-image>
   <!-- Defining the URL inline. Not recommended but more comfortable for web developers. -->
  </a-scene>
   </body>
