--- a/arjs.html
+++ b/arjs.html
@@ -7,7 +7,7 @@
   <body style='margin : 0px; overflow: hidden;'>
   <a-scene embedded arjs='sourceType: webcam;'>
 
-    <a-marker type='pattern' url='path/to/pattern-marker.patt'>
+    <a-marker preset="hiro">
       <a-box position='0 0.5 0' material='color: red;'></a-box>
     </a-marker>
 
