--- a/arjs.html
+++ b/arjs.html
@@ -46,7 +46,7 @@
     <!-- the path should end with the name without the extension e.g. if file is 'pinball.fset' the path should end with 'pinball' -->
     <a-nft
       type="nft"
-      url="<path-to-your-image-descriptors>"
+      url="https://jeromeetienne.github.io/AR.js/data/images/HIRO.jpg"
       smooth="true"
       smoothCount="10"
       smoothTolerance=".01"
@@ -54,7 +54,7 @@
     >
         <!-- as a child of the a-nft entity, you can define the content to show. here's a GLTF model entity -->
         <a-entity
-            gltf-model="<path-to-your-model>"
+            gltf-model="https://kousigan.github.io/inkjs/fox.png"
             scale="5 5 5"
             position="50 150 0"
         >
