--- a/arjs.html
+++ b/arjs.html
@@ -35,8 +35,23 @@
     embedded
     arjs="trackingMethod: best; sourceType: webcam;debugUIEnabled: false;"
   >
+      <a-assets>
+          <video 
+                 src=""
+                 preload="auto"
+                 id="vid"
+                 response-type="arraybuffer"
+                 loop
+                 crossorigin
+                 webkit-playsinline
+                 autoplay
+                 muted
+                 playsinline>
+          </video>
+          </a-assets>
     <!-- we use cors proxy to avoid cross-origin problems -->
     <a-nft
+           videohandler
       type="nft"
       url="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/trex-image/trex"
       smooth="true"
@@ -44,11 +59,8 @@
       smoothTolerance=".01"
       smoothThreshold="5"
     >
-      <a-entity
-        gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf"
-        scale="5 5 5"
-        position="50 150 0"
-      >
+      <a-video src="#vid" position="50 150 -100" width="300" height="175">
+          </a-video>
       </a-entity>
     </a-nft>
     <a-entity camera></a-entity>
